--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,181 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Travel-Gram</title>
+</head>
+<body>
+    <div class="wrapper">
+        <div class="title-w">
+            <h1>Travel-Gram</h1>
+            <h4 class="desktop-view">Desktop</h4>
+            <h4 class="tablet-view">Tablet</h4>
+            <h4 class="mobile-view">Mobile</h4>
+        </div>
+        <div class="grid">
+            <div class="box box1 box--inline-tablet">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon andouille kielbasa chuck tenderloin salami swine beef jerky sausage. 
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box box2">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box box3 box--inline">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box box4 box--inline">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box hidden box5 box--inline">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box hidden box6">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box hidden box7 box--inline">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box hidden box8 box--inline">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box hidden box9 box--inline">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="box hidden box10 box--inline">
+                <div class="xbox-w">
+                    <div class="xbox"></div>
+                </div>
+                <div class="article-w">
+                    <p>
+                        Bacon ipsum dolor amet pork chop burgdoggen pig ground round corned beef capicola cow. Venison chicken filet
+                        mignon doner bacon landjaeger, turducken meatloaf kevin flank pork hamburger. Biltong cupim turducken bacon
+                        andouille kielbasa chuck tenderloin salami swine beef jerky sausage.
+                    </p>
+                    <div class="article-action-w">
+                        <div class="redcircle-w"><span class="redcircle"></span>3</div>
+                        <span class="orange-box"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
