transitions-and-transformations

--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -8,7 +8,7 @@
     <title>transitions-and-transformations</title>
 </head>
 <body>
-    <div class="grid">
+    <main>
         <div class="box box1">1</div>
         <div class="box box2">2</div>
         <div class="box box3">3</div>
@@ -21,6 +21,6 @@
         <div class="box box10">10</div>
         <div class="box box11">11</div>
         <div class="box box12">12</div>
-    </div>
+    </main>
 </body>
 </html>
