added week 5 assignments

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,88 @@
-
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/style.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <div class="grid-container">
+         <div class="box1">
+            <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+            <p>BOX 1.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <input type="radio">
+            <button type="submit">Submit</button>
+        </div>
+        <div class="box2">
+            <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+            <p>BOX 2.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <input type="radio">
+            <button type="submit">Submit</button>
+         </div>
+         <div class="box3">
+             <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+            <p>BOX 3.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
+            <input type="radio">
+            <button type="submit">Submit</button>
+        </div>
+        <div class="box4-grid">
+            <div>
+                <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+                 <p>Box A</p>
+                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                 <input type="radio">
+            <button type="submit">Submit</button>
+            </div>
+            <div>
+                <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+                <p>BoxB</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <input type="radio">
+            <button type="submit">Submit</button>
+              </div>
+              <div class="box-c">
+                 <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+                <p>Box C</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <input type="radio">
+            <button type="submit">Submit</button>
+            </div>
+        </div>
+        <div class="box5">
+            <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+            <p>BOX 5.</p>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <input type="radio">
+            <button type="submit">Submit</button>
+           </div>
+           <div class="box6">
+                <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+                <p>BOX 6</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <input type="radio">
+            <button type="submit">Submit</button>
+        </div>
+        <div class="box7">
+                 <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+                 <p>Box 7</p>
+                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                 <input type="radio">
+            <button type="submit">Submit</button>
+        </div>
+        <div class="box8">
+                <img src="https://cdn1.vectorstock.com/i/1000x1000/16/45/closed-envelope-icon-vector-10061645.jpg">
+                <p>Box 8</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <input type="radio">
+            <button type="submit">Submit</button>
+       </div>
+    </div>
+    
+</body>
+</html>
