--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <main>
+        <div class="abox"></div>
+        <div class="bbox"></div>
+        <div class="abox"></div>
+        <div class="bbox"></div>
+        <div class="abox"></div>
+        <div class="bbox"></div>
+        <div class="abox"></div>
+        <div class="bbox"></div>
+        <div class="abox"></div>
+        <div class="bbox"></div>
+        <div class="abox"></div>
+        <div class="bbox"></div>
+    </main>
+    
+</body>
+</html>
