--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Transitions and Transformations</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
 
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <main class="container">
+        <div class="abox red"></div>
+        <div class="bbox orange"></div>
+        <div class="abox yellow"></div>
+        <div class="bbox green"></div>
+        <div class="abox blue"></div>
+        <div class="bbox indigo"></div>
+        <div class="abox violet"></div>
+        <div class="bbox grey"></div>
+        <div class="abox black"></div>
+        <div class="bbox white"></div>
+        <div class="abox salmon"></div>
+        <div class="bbox cyan"></div>
+    </main>
+</body>
+</html>
