--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -1,1 +1,11 @@
-<h1>~*~Hello, world!~*~</h1>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Juan's Resume</title>
+</head>
+<body>
+  <h1>Hello, World!</h1>
+</body>
+</html>
