Needs Work, Stumped on Desktop Media Query

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>travel-gram assignment</title>
+    <link rel="stylesheet" a href="./css/style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Travel-Gram</h1>
+        </header>
+        <nav>
+            <ul>
+                <li>#1</li>
+                <li>#2</li>
+                <li>#3</li>
+            </ul>
+        </nav>
+        <main>
+            <div class="story1">
+                <img src="./img/samplephoto.jpg" height="25%" width="25%">
+                <h1>story1</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore vitae reprehenderit ad, in adipisci quo officia explicabo beatae, error incidunt quibusdam nemo omnis, dolorum sequi est? Excepturi iusto quas delectus!</p>
+            </div>
+            <div class="story2">
+                <img src="./img/samplephoto.jpg" height="25%" width="25%">
+                <h1>story2</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore vitae reprehenderit ad, in adipisci quo officia explicabo beatae, error incidunt quibusdam nemo omnis, dolorum sequi est? Excepturi iusto quas delectus!</p>
+            </div>
+            <div class="story3">
+                <img src="./img/samplephoto.jpg" height="25%" width="25%">
+                <h1>story3</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore vitae reprehenderit ad, in adipisci quo officia explicabo beatae, error incidunt quibusdam nemo omnis, dolorum sequi est? Excepturi iusto quas delectus!</p>
+            </div>
+            <div class="story4">
+                <img src="./img/samplephoto.jpg" height="25%" width="25%">
+                <h1>story4</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore vitae reprehenderit ad, in adipisci quo officia explicabo beatae, error incidunt quibusdam nemo omnis, dolorum sequi est? Excepturi iusto quas delectus!</p>
+            </div>
+        </main>
+        <footer>footer</footer>
+    </div>
+</body>
+</html>
