--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" a href="./css/style.css">
+</head>
+<body>
+    <div class="parent">
+        <div class="item-1">item-1</div>
+        <div class="item-2">item-2</div>
+        <div class="item-3">item-3</div>
+        <div class="item-4">item-4</div>
+        <div class="item-5">item-5</div>
+        <div class="item-6">item-6</div>
+        <div class="item-7">item-7</div>
+        <div class="item-8">item-8</div>
+        <div class="item-9">item-9</div>
+        <div class="item-10">item-10</div>
+        <div class="item-11">item-11</div>
+        <div class="item-12">item-12</div>
+    </div>
+</body>
+</html>
