--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,111 @@
+<!doctype <!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Welcome to our site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic SC" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
+    <script src="main.js"></script>
+</head>
+
+<body>
+
+    <main>
+        <header role="banner">
+            <div class="title-container">
+                <div class="title">
+                    <h1><img src="img/name.png"></h1>
+                </div>
+            </div>
+        </header>
+
+        <div class="container1">
+
+            <div id="title" class="column">
+                <h1>full</h1>
+                <h1>stack</h1>
+                <h1>web</h1>
+                <h1>developer</h1>
+            </div>
+
+        </div>
+
+        <div class="container2">
+            <div class="wheel">
+                <p><img id="wheel1" src="img/wheel.png"></p>
+            </div>
+            <div class="wheel">
+                <p><img src="img/wheel.png"></p>
+            </div>
+            <div class="wheel">
+                <p><img id="wheel3" src="img/wheel.png"></p>
+            </div>
+        </div>
+
+        <div class="container3">
+        </div>
+
+        <div class="container4">
+        </div>
+
+        <div class="container5">
+        </div>
+
+        <div class="container6">
+            <h3>working portfolio</h3>
+        </div>
+
+        <div class="container7">
+        </div>
+
+        <div class="container8">
+        </div>
+
+        <div class="container9">
+        </div>
+
+
+    <!-- ------------------------------------------------- -->
+        <div class="content1">
+
+            <div class="container10">
+                <div id="skills" class="box">
+                    <ul>
+                        <h2>skills</h2>
+                        <li>html</li>
+                        <li>css</li>
+                        <li>css grid</li>
+                        <li>javascript</li>
+                        <li>ux/ui</li>
+                        <li>box model</li>
+                        <li>flexbox</li>
+                        <li>object oriented programing</li>
+                        <li>responsive application design</li>
+                        <li>algorithums</li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="container11">
+
+            </div>
+        </div>
+        <footer class="footer">
+            <div id="call" class="contact"><img src="img/phone.png"></div>
+            <div id="email" class="contact"><img src="img/mail.png"></div>
+            <div id="instagram" class="contact"><a href="http//:www.instagram.com/michaelsnowdenart.com">
+                    <img src="img/ig.png"></a>
+            </div>
+        </footer>
+    </main>
+</body>
+
+</html>
