--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Cirles to Boxes</title>
+</head>
+<body>
+    <main id="container">
+        <div class="abox box1"></div>
+        <div class="bbox box2"></div>
+        <div class="abox box3"></div>
+        <div class="bbox box4"></div>
+        <div class="abox box5"></div>
+        <div class="bbox box6"></div>
+        <div class="abox box7"></div>
+        <div class="bbox box8"></div>
+        <div class="abox box9"></div>
+        <div class="bbox box10"></div>
+        <div class="abox box11"></div>
+        <div class="bbox box12"></div>
+    </main>
+</body>
+</html>
