--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Transitions & Transformations</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <main>
+        <div class="a" tabindex="1" style="background-color: #e6194B"></div>
+        <div class="b" tabindex="2" style="background-color: #3cb44b"></div>
+        <div class="a" tabindex="3" style="background-color: #ffe119"></div>
+        <div class="b" tabindex="4" style="background-color: #4363d8"></div>
+        <div class="a" tabindex="5" style="background-color: #f58231"></div>
+        <div class="b" tabindex="6" style="background-color: #911eb4"></div>
+        <div class="a" tabindex="7" style="background-color: #42d4f4"></div>
+        <div class="b" tabindex="8" style="background-color: #f032e6"></div>
+        <div class="a" tabindex="9" style="background-color: #bfef45"></div>
+        <div class="b" tabindex="10" style="background-color: #fabebe"></div>
+        <div class="a" tabindex="11" style="background-color: #469990"></div>
+        <div class="b" tabindex="12" style="background-color: #e6beff"></div>
+    </main>
+</body>
+</html>
