--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Travel-Gram</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Travel-Gram</h1>
+        <small class="desktop">Desktop</small>
+        <small class="tablet">Tablet</small>
+        <small class="mobile">Mobile</small>
+    </header>
+        <div class="story1">
+        </div>
 
+        <div class="story2">
+        </div>
+
+        <div class="story3">
+        </div>
+
+        <div class="story4">
+        </div>
+
+        <div class="story5">
+        </div>
+
+        <div class="story6">
+        </div>
+
+        <div class="story7">
+        </div>
+
+        <div class="story8">
+        </div>
+
+        <div class="story9">
+        </div>
+
+        <div class="story10">
+        </div>
+</body>
+</html>
