--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Juan's Resume</title>
+  <title>First Site</title>
 </head>
 <body>
   <h1>Hello, World!</h1>
