--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -3,9 +3,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Resume</title>
+  <title>Juan's Resume</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <h1>HELLO</h1>
+  <header>this is a header</header>
+  <nav>this is a nav</nav>
+  <section>this is a section</section>
+  <article>this is a article</article>
+  <footer>this is a footer</footer>
 </body>
 </html>
