First website resume

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -65,7 +65,10 @@
  TBWA Chiat/Day Los Angeles<br>
  Campbell-Ewald Los Angeles<br> </p>
 
- <section> Yes Waiting to Fill this section </section>
+ <section> 
+    <h2> FREELANCE.</2> 
+  <p> CLIENTS </p> 
+  </section>
     
     <footer> 
       <br>erickaherod@gmail.com<br>
