working on design. adding grid section

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -16,14 +16,17 @@
 
 <body>
 
-    <main>
-        <header role="banner">
-            <div class="title-container">
-                <div class="title">
-                    <h1><img src="img/name.png"></h1>
-                </div>
+    <header role="banner">
+        <div class="title-container">
+            <div class="title">
+                <h1><img src="img/name.png"></h1>
             </div>
-        </header>
+        </div>
+    </header>
+
+    <main>
+        <div class="stripe">
+        </div>
 
         <div class="container1">
 
@@ -51,9 +54,21 @@
         <div class="container3">
         </div>
 
+        <div class="container3a">
+            </div>
+
+        <div class="container3b">
+            </div>
+
         <div class="container4">
         </div>
 
+        <div class="container4">
+        </div>
+
+        <div class="container5">
+        </div>
+        
         <div class="container5">
         </div>
 
@@ -64,14 +79,27 @@
         <div class="container7">
         </div>
 
+        <div class="container7">
+            </div>
+
         <div class="container8">
         </div>
+
+        <div class="container8">
+            </div>
 
         <div class="container9">
         </div>
 
+        <div class="container9a">
+            </div>
 
-    <!-- ------------------------------------------------- -->
+        <div class="container9b">
+            </div>
+        
+        <div class="stripe2"></div>
+
+        <!-- ------------------------------------------------- -->
         <div class="content1">
 
             <div class="container10">
@@ -95,7 +123,21 @@
             </div>
 
             <div class="container11">
+                <h2>career progression</h2>
+                <p>full stack web development student at austin coding academy, focusing in javascript programming. </p>
+            </div>
+        </div>
 
+        <div class="content2">
+
+            <div class="container12">
+                <ul>
+                    <h2>experience working in</h2>
+                    <li>html</li>
+                    <li>css</li>
+                    <li>javascript</li>
+                    <li></li>
+                </ul>
             </div>
         </div>
         <footer class="footer">
