Transition Turn In

--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Transitions</title>
+    <link rel="stylesheet" href="../transitions-and-transformations/css/style.css">
+
+</head>
+
+<body>
+    <main>
+        <section class="boxes">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+    </main>
+
+</body>
+
+</html>
