--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -28,6 +28,12 @@
         </div>
     </header>
 
+    <aside role="banner">
+        <div class="title2">
+            <p><img src="img/signature2.png"> </p>
+        </div>
+    </aside>
+
     <main>
         <div class="stripe">
         </div>
