added new background

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -4,8 +4,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jessica Pena Resume</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>my swan song</h1>
+    <h1 class="title">Jessica K. Pena</h1>
 </body>
+    <section>
+        <h2>Employment</h2>
+        <h5>Wyndham Destinations</h5>
+            <p>Signed up for ACA classes interested in becoming a programmer</p>
+            <li>Student in ACA</li>
+            <li>STudying intro class in html/css</li>
+    </section>
+    <section>
+            <h5>Walmart</h5>
+            <h5>job2 title</h5>
+                <p>Signed up for ACA classes interested in becoming a programmer</p>
+                <li>Student in ACA</li>
+                <li>STudying intro class in html/css</li>
+        </section>
+
 </html>
