--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -66,7 +66,6 @@
  <p>ZENOSS (Enterprise Software)</p>
  <br>
  <p>SUNPOWER SOLAR SYSTEMS</p>
- <br>
  <P>Developed new brand standards and templates for global use and distribution </P>
  <P>Designed themes for conferences, collateral print materials, conference materials, print and web banner ads </P>
  <br>
@@ -77,8 +76,8 @@
  <p>Provided quality assurance on creative deliverables </p>
  <br>
  <P>SANDERS/WINGO</P>
- <BR
- <P>Trace Magazine LA/NYC/UK </P>
+ <BR>
+ <p> Trace Magazine LA/NYC/UK </P>
  <P>True Agency Los Angeles</P>
  <P>TBWA Chiat/Day Los Angeles</P>
  <P>Campbell-Ewald Los Angeles</p>
