--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -46,6 +46,7 @@
         </article>
     </section>
   </main>
+  
   <aside>
       <h2><u>Professional Summary</u></h2>
       <p>Inexperienced web developer who
@@ -54,7 +55,7 @@
       </p>
      
    </aside>
-
+   <footer>Emilio Sanchez Resume</footer>
   <!--<footer>Emilio Sanchez Resume</footer> --> 
     
 
