added new info to employment section

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -14,11 +14,10 @@
         <h5>Wyndham Destinations</h5>
             <p>Signed up for ACA classes interested in becoming a programmer</p>
             <li>Student in ACA</li>
-            <li>STudying intro class in html/css</li>
+            <li>inform the community of better ways to travel</li>
     </section>
     <section>
             <h5>Walmart</h5>
-            <h5>job2 title</h5>
                 <p>Signed up for ACA classes interested in becoming a programmer</p>
                 <li>Student in ACA</li>
                 <li>STudying intro class in html/css</li>
