--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -10,7 +10,7 @@
     <h1 class="title">Jessica K. Pena</h1>
 </body>
     <section>
-        <h2>Employment</h2>
+        <h2 class="part">Employment</h2>
         <h5>Wyndham Destinations</h5>
             <p>Signed up for ACA classes interested in becoming a programmer</p>
             <li>Student in ACA</li>
