Grid Assignment Final

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -8,29 +8,23 @@
     <link rel="stylesheet" a href="./css/style.css">
 </head>
 <body>
+    <header>
+        <h1>Travel-Gram</h1>
+        <p class="desktop">Desktop</p>
+        <p class="tablet">Tablet</p>
+        <p class="mobile">Mobile</p>
+    </header>
     <div class="container">
-        <header>
-            <h1>Travel-Gram</h1>
-        </header>
-        <main>
-            <div class="story1">
-                <img src="./img/samplephoto.jpg" height="25%" width="25%">
-                <h1>story1</h1>
-            </div>
-            <div class="story2">
-                <img src="./img/samplephoto.jpg" height="25%" width="25%">
-                <h1>story2</h1>
-            </div>
-            <div class="story3">
-                <img src="./img/samplephoto.jpg" height="25%" width="25%">
-                <h1>story3</h1>
-            </div>
-            <div class="story4">
-                <img src="./img/samplephoto.jpg" height="25%" width="25%">
-                <h1>story4</h1>
-            </div>
-        </main>
-        <footer>footer</footer>
+        <div class="boxy1">1</div>
+        <div class="boxy2">2</div>
+        <div class="boxy3">3</div>
+        <div class="boxy4">4</div>
+        <div class="boxy5">5</div>
+        <div class="boxy6">6</div>
+        <div class="boxy7">7</div>
+        <div class="boxy8">8</div>
+        <div class="boxy9">9</div>
+        <div class="boxy10">10</div>
     </div>
 </body>
 </html>
