started about me page and styled the heading

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <h1 class="title">Jessica K. Pena</h1>
+
+<nav>
+    <ul>
+    
+    </ul>
+</nav>
 </body>
     <section>
-        <h2 class="part">Employment</h2>
+        <h2 
+        class="part">Employment</h2>
         <h5>Wyndham Destinations</h5>
             <p>Signed up for ACA classes interested in becoming a programmer</p>
             <li>Student in ACA</li>
