--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Coolest Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
 
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+
+</head>
+<body>
+    <header>
+        <div class="headerBox">
+            <div class="logo">
+                Lorem Web Company
+            </div>
+            
+        </div>
+    </header>
+    <div class="pageTopTitle flexCenter">
+        <h1><span class="bold">Lorem</span> solutions to <span class="bold">Ipsum</span> problems.</h1>
+    </div>
+    <div class="portfolio">
+        <a href="#" class="folioBox">
+            <h1 class="projectHeader">Space Advisor</h1>
+            <div class="project1"></div>
+            <p>Space advisor is a website that I had nothing to do with; however, I am using it for this portfolio checkpoint because I have no significantly interesting content to display.</p> 
+        </a>
+        <a href="#" class="folioBox">
+            <h1 class="projectHeader">Nat Geo Mars</h1>
+            <div class="project2"></div>
+            <p>Nat Geo Mars is a website that I had nothing to do with; however, I am using it for this portfolio checkpoint because I have no significantly interesting content to display.</p>
+        </a>
+        <a href="#" class="folioBox">
+            <h1 class="projectHeader">Space Design</h1>
+            <div class="project3"></div>
+            <p>Space Design is a website that I had nothing to do with; however, I am using it for this portfolio checkpoint because I have no significantly interesting content to display.</p>
+        </a>
+        <a href="#" class="folioBox">
+            <h1 class="projectHeader">Space Travel</h1>
+            <div class="project4"></div>
+            <p>Space Travel is a website that I had nothing to do with; however, I am using it for this portfolio checkpoint because I have no significantly interesting content to display.</p>
+        </a>   
+    </div>
+    
+</body>
+</html>
