added nav links and worked on media queries more

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -20,13 +20,16 @@
             <div class="logo">
                 <a href="#">Lorem Web Company</a>
             </div>
-            
+            <ul>
+                <li><a href="#portfolioId">Portfolio</a></li>
+                <li><a href="#contactId">Contact</a></li>
+            </ul>            
         </div>
     </header>
     <div class="pageTopTitle flexCenter">
-        <h1><span class="bold">Lorem</span> solutions to <span class="bold">Ipsum</span> problems.</h1>
+        <h1 class="title"><span class="bold">Lorem</span> solutions to <span class="bold">Ipsum</span> problems.</h1>
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="portfolioId">
         <a href="#" class="folioBox">
             <h1 class="projectHeader">Space Advisor</h1>
             <div class="project1"></div>
@@ -48,7 +51,7 @@
             <p>Space Travel is a website that I had nothing to do with; however, I am using it for this portfolio checkpoint because I have no significantly interesting content to display.</p>
         </a>   
     </div>
-    <div class="contact">
+    <div class="contact" id="contactId">
         <h1>Contact Me!</h1>
         <p>Name:</p>
         <input type="text" class="textbox">
