changed a few things

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -83,16 +83,16 @@
 
         <div class="footerBox smallSocial">
             <a href="#">
-                <i class="fa fa-envelope fa-fw" aria-hidden="true"></i>
+                <i class="fa icon fa-envelope fa-fw" aria-hidden="true"></i>
             </a>
             <a href="#">
-                <i class="fa fa-facebook-square fa-fw" aria-hidden="true"></i>
+                <i class="fa icon fa-facebook-square fa-fw" aria-hidden="true"></i>
             </a>
             <a href="#">
-                <i class="fa fa-linkedin-square fa-fw" aria-hidden="true"></i>
+                <i class="fa icon fa-linkedin-square fa-fw" aria-hidden="true"></i>
             </a>
             <a href="#">
-                <i class="fa fa-github-square fa-fw" aria-hidden="true"></i>
+                <i class="fa icon fa-github-square fa-fw" aria-hidden="true"></i>
             </a>
         </div>
     </footer>
