--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -20,15 +20,18 @@
             <div class="logo">
                 <a href="#">Lorem Web Company</a>
             </div>
+            <!--nav links-->
             <ul>
                 <li><a href="#portfolioId">Portfolio</a></li>
                 <li><a href="#contactId">Contact</a></li>
             </ul>            
         </div>
     </header>
+    <!--background and slogan-->
     <div class="pageTopTitle flexCenter">
         <h1 class="title"><span class="bold">Lorem</span> solutions to <span class="bold">Ipsum</span> problems.</h1>
     </div>
+    <!--begin portfolio section-->
     <div class="portfolio" id="portfolioId">
         <a href="#" class="folioBox">
             <h1 class="projectHeader">Space Advisor</h1>
@@ -51,6 +54,7 @@
             <p>Space Travel is a website that I had nothing to do with; however, I am using it for this portfolio checkpoint because I have no significantly interesting content to display.</p>
         </a>   
     </div>
+    <!--contact form-->
     <div class="contact" id="contactId">
         <h1>Contact Me!</h1>
         <p>Name:</p>
@@ -58,6 +62,7 @@
         <p>Message:</p>
         <textarea rows="6"></textarea>
         <button class="submit popup" onclick="popupFunction()">Submit<span class="popuptext" id="myPopup">Thanks for contacting me!</span></button>
+        <!--Javascript for popup on button click-->
         <script>
             function popupFunction() {
                 var popup = document.getElementById("myPopup");
@@ -65,6 +70,7 @@
             }
         </script>
     </div>
+    <!--begin footer-->
     <footer>
         <div class="footerBox">
             <i class="fa fa-map-pin location" aria-hidden="true"></i>
@@ -77,16 +83,16 @@
             <p class="phone">(567)364-7786</p>
         </div>
 
-    <!-- Removed this box but may want it in the future!
-
+        <!-- Removed this box but may want it in the future!!!
         <div class="footerBox wideSocial">
             <a href="#" class="email">lorem@ipsum.com</a>
             <a href="#" class="fb">Facebook</a>
             <a href="#" class="linkedin">LinkedIn</a>
             <a href="#" class="github">GitHub</a>
         </div>
-    -->
+        -->
 
+        <!--responsive social icons-->
         <div class="footerBox smallSocial">
             <a href="#">
                 <i class="fa icon fa-envelope fa-fw" aria-hidden="true"></i>
