--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <script src="js/function.js"></script>
+    <linkh ref="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Document</title>
+  </head>
+  <div id="container" class="containerstyle">
+    <body>
+        <nav id="navcol">
+            <ul id="navlist" style="list-style-type:none">
+                <li class="navitem">Home</li>
+                <li class="navitem">Contact</li>
+                <li class="navitem">Services</li>
+                <li class="navitem">About Us</li>
+            </ul>
+        </nav>
+        <header>
+          <div id="navcon" onclick="navBar()">
+            <div class="navbtn"></div>
+            <div class="navbtn"></div>
+            <div class="navbtn"></div>
+          </div>
+          <h1>test</h1>
+          <h2>test</h2>
+        </header>
+        <section class="section1">
+            test
+        </section>
+    </body>
+  </div>
+</html>
